<resources>
    <string name="app_name">检测评估2.0</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="biansuxiang">变速器</string>
    <string name="drive_mode">驱动方式</string>
    <string name="paiqiliang">排量</string>
    <string name="transmission">@string/biansuxiang</string>

    <string name="please_wait_amoment">请稍等...</string>
    <!-- 车型选择 -->
    <string name="car_type_select_brand">品牌选择</string>
    <string name="car_type_select_series">车系选择</string>
    <string name="car_type_select_type">车型选择</string>
    <string name="car_type_select_parameters">参数选择</string>
    <string name="car_type_select_clear">清空重选</string>
    <string name="car_type_select_complete">完成</string>
    <string name="selected_date_cannot_after_than_today">不能选择今天之后的日期</string>
    <string name="modify">修改</string>
    <string name="select_car">直接选车</string>
    <string name="car_type_can_not_modify">车型不可修改</string>
    <string name="next_step">下一步</string>
    <string name="photo_compare">照片对比</string>
    <string name="show_config">查看配置</string>
    <string name="reload">重新加载</string>
    <string name="check_net">对不起，您的网络状况不佳，请确保已经连接网络!</string>
    <string name="gb_code_confirm_hint">请确认以下内容是否与车辆铭牌中的车辆型号一致，如不一致，请按照铭牌处修改</string>
    <!-- 登录 -->
    <string name="username_cannot_be_null">用户名不可为空!</string>
    <string name="pwd_cannot_be_null">密码不可为空!</string>
    <!-- 手续信息 -->
    <string name="identification">识别</string>
    <string name="again_identify">重新识别</string>
    <string name="save_idenfication">保存识别结果并开始检测</string>
    <string name="identified_info">已识别信息</string>
    <string name="province_select">省份选择</string>
    <string name="city_select">市选择</string>
    <!--附加信息-->
    <string name="buy_price">车商收车价</string>
    <string name="please_type_buy_price">请输入车商收车价</string>
    <string name="ten_thousand">万元</string>
    <string name="given_to_two_decimal_after">注：精确到小数点后2位</string>
    <string name="history_evaluation_price">历史评估价</string>
    <string name="new_car_preferential_price">新车优惠价</string>
    <string name="sale_price">车商售车价</string>
    <string name="please_type_sale_price">请输入车商售车价</string>
    <string name="out_checked">外观检查</string>
    <string name="accident_checked">事故检查</string>
    <string name="cabin_checked">机舱检查</string>
    <string name="in_checked">内饰检查</string>
    <string name="chassis_checked">底盘检查</string>
    <string name="electric_checked">电气检查</string>
    <string name="burn_sign">火烧迹象</string>
    <string name="no_burn_sign">未见火烧迹象</string>
    <string name="exist_burn_sign">存在火烧迹象</string>
    <string name="is_burningCar">经综合判断为火烧车</string>
    <string name="water_sign">泡水迹象</string>
    <string name="no_water_sign">未见泡水迹象</string>
    <string name="exist_water_sign">存在泡水迹象</string>
    <string name="is_waterCar">经综合判断为泡水车</string>
    <string name="the_car_has_burning_suspicion">此车存在重大火烧嫌疑，请仔细查看并进行判断</string>
    <string name="the_car_has_water_suspicion">此车存在重大泡水嫌疑，请仔细查看并进行判断</string>
    <string name="marketOwnership">市场保有量</string>
    <string name="marketAcceptance">市场认可度</string>
    <string name="marketHedgeRatio">市场保值率</string>
    <string name="high">较高</string>
    <string name="general">一般</string>
    <string name="low">较低</string>
    <string name="please_type_other_important_info">请填写其他重要信息,请控制在100字以内</string>
    <string name="submit">提 交</string>
    <string name="result_checked">评估结果检查</string>
    <string name="buy_price_can_not_be_zero">车商收车价不能为0</string>
    <string name="sale_price_can_not_be_zero">车商售车价不能为0</string>
    <string name="buy_price_can_not_be_greater_than_999.98">车商收车价不可超过999.98万元</string>
    <string name="sale_price_can_not_be_greater_than_999.99">车商售车价不可超过999.99万元</string>
    <string name="sale_price_must_be_greater_than_buy_price">车商售车价必须大于车商收车价</string>
    <string name="content_not_complete">评估结果页面填写不完整</string>
    <string name="you_will_exit_car_detection">您即将退出车况检测</string>
    <string name="save_succeed">保存成功</string>
    <!--历史评估价 -->
    <string name="close">关闭</string>
    <string name="sign_date">签收日期</string>
    <string name="receive_price">收车价</string>
    <string name="sell_price">售车价</string>
    <string name="organization_area">机构地区</string>

    <string name="global_dialog">您有新的淘车复检订单，请尽快认领！</string>


    <string name="part1">轮胎/轮毂</string>
    <string name="part2">车灯</string>
    <string name="part3">玻璃</string>
    <string name="part4">车身其他缺陷</string>

    <!--滚轮 -->
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="cancel">取消</string>
</resources>
