<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include layout="@layout/comm_white_title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <LinearLayout
            android:id="@+id/ll_data"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/DIP_10"
            >

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_date"
                style="@style/history_price_rv_title"
                />
            <TextView
                android:id="@+id/tvBuyPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/receive_price"
                style="@style/history_price_rv_title"
                />
            <TextView
                android:id="@+id/tvSellPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sell_price"
                style="@style/history_price_rv_title"
                />
            <TextView
                android:id="@+id/tvArea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/organization_area"
                style="@style/history_price_rv_title"
                />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_below="@+id/ll_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            />

        <com.jcpt.jzg.padsystem.widget.CustomRippleButton
            android:id="@+id/crbClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/DIP_15"
        android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="@dimen/SP_20_L"
            fresco:unpressed_color="@color/common_btn_blue"
            fresco:round_radius="3dp"
            android:visibility="gone"
            />
    </RelativeLayout>
</LinearLayout>
