<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include layout="@layout/comm_white_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.4"
            android:orientation="vertical"
            >

            <TextView
                style="@style/car_type_title"
                android:text="@string/car_type_select_brand"
                />

            <com.jcpt.jzg.padsystem.view.BrandSelectView
                android:id="@+id/view_brand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/common_gray_line"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            >

            <TextView
                style="@style/car_type_title"
                android:text="@string/car_type_select_series"
                />

            <com.jcpt.jzg.padsystem.view.SeriesSelectView
                android:id="@+id/view_series"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/common_gray_line"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.6"
            android:orientation="vertical"
            >

            <TextView
                style="@style/car_type_title"
                android:text="@string/car_type_select_parameters"
                />

            <com.jcpt.jzg.padsystem.view.CarConfigSelectView
                android:id="@+id/view_car_config"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIP_60_L"
        android:orientation="horizontal"
        >

        <com.jcpt.jzg.padsystem.widget.CustomRippleButton
            android:id="@+id/crb_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/car_type_select_clear"
            android:textColor="@color/white"
            android:textSize="@dimen/SP_20_L"
            custom:unpressed_color="@color/common_orange_light"
            />

        <com.jcpt.jzg.padsystem.widget.CustomRippleButton
            android:id="@+id/crb_complete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/car_type_select_complete"
            android:textColor="@color/white"
            android:textSize="@dimen/SP_20_L"
            custom:unpressed_color="@color/common_theme_blue"
            />

    </LinearLayout>
</LinearLayout>
