<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include layout="@layout/comm_white_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:orientation="vertical"
            >

            <TextView
                style="@style/car_type_title"
                android:text="@string/car_type_select_brand"
                />

            <com.jcpt.jzg.padsystem.view.BrandSelectView
                android:id="@+id/view_brand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/common_gray_line"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            >

            <TextView
                style="@style/car_type_title"
                android:text="@string/car_type_select_series"
                />

            <com.jcpt.jzg.padsystem.view.SeriesSelectView
                android:id="@+id/view_series"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/common_gray_line"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical"
            >

            <TextView
                style="@style/car_type_title"
                android:text="@string/car_type_select_type"
                />

            <com.jcpt.jzg.padsystem.view.TypeSelectView
                android:id="@+id/view_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
