<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:zhy="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/left_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="3dp"
            >

            <com.jcpt.jzg.padsystem.widget.AutoFitTextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="车型"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large_20sp"
                android:gravity="center"
                />
            <com.jcpt.jzg.padsystem.widget.CustomRippleButton
                android:id="@+id/crbSelectCar"
                android:layout_width="@dimen/DIP_90_L"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/select_car"
                android:textColor="@color/white"
                android:textSize="@dimen/SP_16_L"
                android:layout_marginLeft="@dimen/DIP_5"
                android:layout_marginRight="@dimen/DIP_10"
                android:gravity="center"
                android:background="@null"
                zhy:unpressed_color="@color/common_btn_blue"
                zhy:ripple_color="@color/common_blue_dark"
                zhy:round_radius="10dp"
                />

            <com.jcpt.jzg.padsystem.widget.CustomRippleButton
                android:id="@+id/crb_modify"
                android:layout_width="@dimen/DIP_90_L"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/modify"
                android:textColor="@color/white"
                android:textSize="@dimen/SP_16_L"
                android:layout_marginRight="@dimen/DIP_10"
                android:gravity="center"
                android:background="@null"
                zhy:unpressed_color="@color/common_btn_blue"
                zhy:ripple_color="@color/common_blue_dark"
                zhy:round_radius="10dp"
                />

            <com.jcpt.jzg.padsystem.widget.CustomRippleButton
                android:id="@+id/crbShowConfig"
                android:layout_width="@dimen/DIP_90_L"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/show_config"
                android:textColor="@color/white"
                android:textSize="@dimen/SP_16_L"
                android:layout_marginRight="@dimen/DIP_10"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:background="@null"
                zhy:unpressed_color="@color/common_btn_blue"
                zhy:ripple_color="@color/common_blue_dark"
                zhy:round_radius="10dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/common_gray_line"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <com.jcpt.jzg.padsystem.view.CarTypeListView
                android:id="@+id/car_type_list_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/common_gray_line"
                />
            <com.jcpt.jzg.padsystem.view.CarDiffSelectView
                android:id="@+id/car_diff_select"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
        </LinearLayout>
</LinearLayout>