<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:zhy="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIP_50"
        android:gravity="center"
        android:paddingBottom="@dimen/DIP_5"
        android:paddingTop="@dimen/DIP_5"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/DIP_10"
            android:text="宝马推荐车型："
            android:textColor="@color/global_gray_6"
            android:textSize="@dimen/text_medium_16sp"
            />

        <TextView
            android:id="@+id/tvBmwCarName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/global_gray_6"
            android:textSize="@dimen/text_medium_16sp"
            />

        <Button
            android:id="@+id/btnBmwConfig"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/DIP_35_L"
            android:layout_marginRight="@dimen/DIP_10"
            android:background="@drawable/btn_bg_selector_blue"
            android:padding="@dimen/DIP_6"
            android:text="BMW推荐配置"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_14sp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_gray_line"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/left_list_item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="3dp"
        >

        <com.jcpt.jzg.padsystem.widget.AutoFitTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="车型"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large_20sp"
            />

        <com.jcpt.jzg.padsystem.widget.CustomRippleButton
            android:id="@+id/crbSelectCar"
            android:layout_width="@dimen/DIP_90_L"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/DIP_5"
            android:layout_marginRight="@dimen/DIP_10"
            android:background="@null"
            android:gravity="center"
            android:text="@string/select_car"
            android:textColor="@color/white"
            android:textSize="@dimen/SP_16_L"
            zhy:ripple_color="@color/common_blue_dark"
            zhy:round_radius="10dp"
            zhy:unpressed_color="@color/common_btn_blue"
            />

        <com.jcpt.jzg.padsystem.widget.CustomRippleButton
            android:id="@+id/crb_modify"
            android:layout_width="@dimen/DIP_90_L"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/DIP_10"
            android:background="@null"
            android:gravity="center"
            android:text="@string/modify"
            android:textColor="@color/white"
            android:textSize="@dimen/SP_16_L"
            zhy:ripple_color="@color/common_blue_dark"
            zhy:round_radius="10dp"
            zhy:unpressed_color="@color/common_btn_blue"
            />

        <com.jcpt.jzg.padsystem.widget.CustomRippleButton
            android:id="@+id/crbShowConfig"
            android:layout_width="@dimen/DIP_90_L"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/DIP_10"
            android:background="@null"
            android:gravity="center"
            android:text="@string/show_config"
            android:textColor="@color/white"
            android:textSize="@dimen/SP_16_L"
            zhy:ripple_color="@color/common_blue_dark"
            zhy:round_radius="10dp"
            zhy:unpressed_color="@color/common_btn_blue"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_gray_line"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.jcpt.jzg.padsystem.view.BMWCarTypeListView
            android:id="@+id/car_type_list_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/common_gray_line"
            />

        <com.jcpt.jzg.padsystem.view.BMWCarDiffSelectView
            android:id="@+id/car_diff_select"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>